rewrite order connecting scripts ,changed orrder data in smooth navigation, improved state of navigation

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,7 +16,7 @@
             <nav>
                 <a href="/">Home</a>
                 <a href="/about">About</a>
-                <a href="/contact" class="active">Contact</a>
+                <a href="/contact"  class="active">Contact</a>
             </nav>
         </header>
         
@@ -34,9 +34,9 @@
                     </div>
                     <div class="mb-3">
                         <label for="message" class="d-block mb-2">Message:</label>
-                        <textarea id="message" name="message" rows="5" class="w-100 p-2 rounded border"></textarea>
+                        <textarea id="message" name="message" rows="4" class="w-100 p-2 rounded border"></textarea>
                     </div>
-                    <button type="submit" class="p-2 bg-primary text-white border-0 rounded">Send Message</button>
+                    <button type="submit" class="p-2 bg-primary text-white border-0 rounded btn btn-primary align-self-start">Send Message</button>
                 </form>
             </div>
         </main>
@@ -46,6 +46,7 @@
         </footer>
     </div>
 
+    <script src="/js/app.js"></script>
     <script src="/js/contact.js"></script>
 </body>
 </html>
