--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
             <h1>About Us</h1>
             <nav>
                 <a href="/">Home</a>
-                <a href="/about" class="active">About</a>
+                <a href="/about"  class="active">About</a>
                 <a href="/contact">Contact</a>
             </nav>
         </header>
@@ -32,7 +32,7 @@
         </footer>
     </div>
 
-    <script src="/js/common.js"></script>
+    <script src="/js/app.js"></script>
     <script src="/js/about.js"></script>
 </body>
 </html>
