--- a/views/about.ejs
+++ b/views/about.ejs
@@ -32,7 +32,7 @@
         </footer>
     </div>
 
-    <script src="/js/app.js"></script>
-    <script src="/js/about.js"></script>
+    <script type="module" src="/js/app.js"></script>
+    <script src="/js/pages/about.js"></script>
 </body>
 </html>
