--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -46,7 +46,7 @@
         </footer>
     </div>
 
-    <script src="/js/app.js"></script>
-    <script src="/js/contact.js"></script>
+    <script type="module" src="/js/app.js"></script>
+    <script src="/js/pages/contact.js"></script>
 </body>
 </html>
