--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,6 @@
         </footer>
     </div>
 
-    <script src="/js/app.js"></script>
+    <script type="module" src="/js/app.js"></script>
 </body>
 </html>
