--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,7 @@
         <header>
             <h1>About Us</h1>
             <nav>
-                <a href="/">Home</a>
+                <a href="/home">Home</a>
                 <a href="/about"  class="active">About</a>
                 <a href="/contact">Contact</a>
             </nav>
