--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -14,7 +14,7 @@
         <header>
             <h1>Contact Us</h1>
             <nav>
-                <a href="/">Home</a>
+                <a href="/home">Home</a>
                 <a href="/about">About</a>
                 <a href="/contact"  class="active">Contact</a>
             </nav>
