--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
         <header>
             <h1>Welcome to Node.js SPA PWA</h1>
             <nav>
-                <a href="/"  class="active">Home</a>
+                <a href="/home"  class="active">Home</a>
                 <a href="/about">About</a>
                 <a href="/contact">Contact</a>
             </nav>
